--- a/style.css
+++ b/style.css
@@ -210,6 +210,7 @@ p.card-body {
   margin: 5px 0px;
   max-width: auto;
   max-height: 450px;
+  
 }
 
 /* div> img[src="./images/Rectangle.png"]{
@@ -224,6 +225,8 @@ p.card-body {
   padding: 15px;
   border-radius: 0px 20px 20px 0px;
   background-color: #ffffff;
+  box-shadow: 0 0px 8px 0 rgba(0, 0, 0, 0.2), 0 1px 8px 0.2 rgba(0, 0, 0, 0.19);
+
 }
 
 .blog-card-bottom-image {
